# PROREALTIME_V2

./: .gitignore  README.md  pyproject.toml
docs/: MIGRATION.md
src/prorealtime_v2/: __init__.py  __main__.py  cli.py  config.py  indicators.py  models.py  orders.py  validation.py
src/prorealtime_v2/analysis/: registry.py  runners.py
src/prorealtime_v2/brokers/: __init__.py  base.py  ibkr_gateway.py
src/prorealtime_v2/data/: __init__.py  yahoo.py
src/prorealtime_v2/domain/: models.py
src/prorealtime_v2/gui/: __init__.py  tk_app.py
src/prorealtime_v2/indicators/: technical.py
src/prorealtime_v2/notifications/: __init__.py  emailer.py
src/prorealtime_v2/presentation/desktop/: app.py  theme.py  widgets.py
src/prorealtime_v2/reports/: __init__.py  export.py  hold_report.py
src/prorealtime_v2/strategies/: __init__.py  hold_conditions.py  hold_rules.py  hold_signals.py  macd_trend.py
src/prorealtime_v2/utils/: parsing.py
tests/: test_hold_rules.py  test_signals.py
